fix(FormFieldMessage): add spacing tokens and align to Astro design specs
* add spacing tokens adjust/test

* add proper styling to labels

--- a/packages/web-components/src/components/rux-input/rux-input.scss
+++ b/packages/web-components/src/components/rux-input/rux-input.scss
@@ -139,11 +139,11 @@
         }
     }
     .rux-input-label {
-        font-family: var(--font-body-1-font-family);
-        font-size: var(--font-body-1-font-size);
-        font-weight: var(--font-body-1-font-weight);
-        letter-spacing: var(--font-body-1-letter-spacing);
-        margin-bottom: var(--spacing-input-label-top);
+        font-family: var(--font-control-body-1-font-family);
+        font-size: var(--font-control-body-1-font-size);
+        font-weight: var(--font-control-body-1-font-weight);
+        letter-spacing: var(--font-control-body-1-letter-spacing);
+        margin-bottom: var(--spacing-2);
         &__asterisk {
             margin-left: var(--spacing-1);
         }
